tests/fixtures/invalid/bool_3_args.py
# bool() takes at most 1 argument, got 3
x = bool(1, 1, 1)
